# AIS2202-estimation-template

./: CMakeLists.txt  Fusion.m  KalmanFilter.m  KalmanFilterMatlab  README.md  SeconAccelerationIsNotSwitchedUp.asv  SeconAccelerationIsNotSwitchedUp.m  mainForKalmanFilter.m  myMatlabFileForStateEstimation.m  newKalmanMatlab.m
estimation/: CMakeLists.txt  kalman_filter.cpp
estimation/include/estimation/: kalman_filter.h
parameter_estimation/: CMakeLists.txt  main.cpp
state_estimation/: CMakeLists.txt  main.cpp
